[gd_scene load_steps=6 format=3 uid="uid://bva7lrsw2bkx3"]

[ext_resource type="Script" path="res://scripts/game/weaponsPickup/weaponsPickup.gd" id="1_137pu"]

[sub_resource type="Animation" id="Animation_dsj67"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_sv7mq"]
resource_name = "pickup"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pg0nb"]
_data = {
"RESET": SubResource("Animation_dsj67"),
"pickup": SubResource("Animation_sv7mq")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x53mp"]
size = Vector2(8, 15)

[node name="weaponPickup" type="StaticBody2D"]
texture_filter = 1
script = ExtResource("1_137pu")

[node name="sprite" type="Sprite2D" parent="."]

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pg0nb")
}

[node name="areaCol" type="Area2D" parent="." groups=["weaponPickup"]]
collision_layer = 2
collision_mask = 2

[node name="col" type="CollisionShape2D" parent="areaCol"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_x53mp")

[node name="pickupText" type="Label" parent="."]
texture_filter = 1
offset_left = -2.0
offset_top = -22.0
offset_right = 38.0
offset_bottom = 1.0
scale = Vector2(0.5, 0.5)
text = "E"

[connection signal="area_entered" from="areaCol" to="." method="_on_area_col_area_entered"]
[connection signal="area_exited" from="areaCol" to="." method="_on_area_col_area_exited"]
